gaming desktop responsiveness

--- a/src/app/pages/hero/hero.component.html
+++ b/src/app/pages/hero/hero.component.html
@@ -3,22 +3,22 @@
     <div class="row py-5">
         <div class="col-lg-1 d-none d-lg-flex align-items-center">
             <div class="lc-block d-flex" style="writing-mode: vertical-rl; transform:rotate(180deg)">
-                <a class="btn btn-link my-2 text-white text-decoration-none" href="#" role="button">Welcome</a>
-                <a class="btn btn-link my-4 text-white text-decoration-none" href="#" role="button">Bienvenue</a>
-                <a class="btn btn-link my-2 text-white text-decoration-none" href="#" role="button" lang="ar">مرحبا</a>
+                <a class="btn btn-link my-2 text-white text-decoration-none">Welcome</a>
+                <a class="btn btn-link my-4 text-white text-decoration-none">Bienvenue</a>
+                <a class="btn btn-link my-2 text-white text-decoration-none" lang="ar">مرحبا</a>
             </div><!-- /lc-block -->
         </div><!-- /col -->
         <div class="col-sm-6 d-flex d-lg-none flex-sm-column align-items-center justify-content-around mb-4 mb-sm-0">
             <div class="lc-block">
-                <a class="btn btn-link text-white text-decoration-none" href="#" role="button">Welcome</a>
+                <a class="btn btn-link text-white text-decoration-none">Welcome</a>
 
             </div>
             <div class="lc-block">
-                <a class="btn btn-link text-white text-decoration-none" href="#" role="button">Bienvenue</a>
+                <a class="btn btn-link text-white text-decoration-none">Bienvenue</a>
 
             </div>
             <div class="lc-block">
-                <a class="btn btn-link text-white text-decoration-none" href="#" role="button" lang="ar">مرحبا</a>
+                <a class="btn btn-link text-white text-decoration-none" lang="ar">مرحبا</a>
 
             </div>
         </div>
