--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,6 +1,6 @@
-<section class="get-in-touch" id="contact">
+<section class="get-in-touch">
    <h1 class="title">Get in touch</h1>
-   <form name="contact" netlify netlify-honeypot="bot-field" (ngSubmit)="onSubmit()" [formGroup]="contactForm" class="contact-form row">
+   <form name="contact" method="POST" netlify netlify-honeypot="bot-field" (ngSubmit)="onSubmit()" [formGroup]="contactForm" class="contact-form row">
      <input type="hidden" name="form-name" value="contact" />
      <div class="form-field col-lg-6">
        <input id="name" name="name" formControlName="name" class="input-text js-input" type="text" required />
