--- a/src/app/pages/studies/studies.component.html
+++ b/src/app/pages/studies/studies.component.html
@@ -31,7 +31,8 @@
     </li>
     <li style="--index: 6">
       <h3>2024</h3>
-      <p><b>This is Future!</b><br>
+      <p><b>Vistula Univerisy-Poland</b><br>
+        Preparing for a Master's Degree in Computer Engineering-Applied Data Science-
       </p>
     </li>
     <li style="--index: 7">
