--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     <li><a [routerLink]="['/']" [queryParams]="{ fragment: 'projects' }"><i class="far fa-moon"></i>Projects</a></li>
     <li><a [routerLink]="['/']" [queryParams]="{ fragment: 'certificates' }"><i class="fas fa-globe"></i>Certificates</a></li>
     <li><a [routerLink]="['/']" [queryParams]="{ fragment: 'contact' }"><i class="far fa-star"></i>Contact</a></li>
-    <li><a href="assets/cv/MyResume.pdf" target="_blank"><i class="fas fa-meteor"></i>CV</a></li>
+    <li><a href="assets/cv/MyR.pdf" target="_blank"><i class="fas fa-meteor"></i>CV</a></li>
   </ul>
 </nav>
 
